# Vulkan-Engine

./: .bazelrc  .clang-format  BUILD  BUILD_SETUP.md  MODULE.bazel  README.md  SOLUTION.md  WORKSPACE  imgui.ini  setup_env.sh
.github/workflows/: build.yml  configure.yml  main.yml
VulkanCore/: BUILD  BitmapUtils.cpp  Camera.cpp  Core.cpp  GLFW.cpp  GraphicsPipeline.cpp  GraphicsPipelineV2.cpp  ImGuiRenderer.cpp  PhysicalDevice.cpp  Queue.cpp  Shader.cpp  SkyBox.cpp  Texture.cpp  VulkanModel.cpp  Wrapper.cpp
VulkanCore/include/: BitmapUtils.h  Camera.h  Core.h  GLFW.h  GraphicsPipeline.h  GraphicsPipelineV2.h  ImGuiRenderer.h  ModelDesc.h  PhysicalDevice.h  Queue.h  Shader.h  SimpleMesh.h  SkyBox.h  Texture.h  VulkanModel.h  Wrapper.h
VulkanCore/model/: Material.cpp  Mesh.cpp  Model.cpp
VulkanCore/model/include/: Material.h  Mesh.h  Model.h
VulkanCore/shaders/: skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
VulkanDemo/: App.cpp  BUILD  main.cpp
VulkanDemo/include/: App.h
VulkanDemo/shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
